core/tests/ui/store/nested_ref_foreign_unique_rejected.stderr
error: #[foreign] fields cannot be used as #[unique] lookup keys
  --> tests/ui/store/nested_ref_foreign_unique_rejected.rs:15:5
   |
15 |     child: ChildModel,
   |     ^^^^^
